--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,6 +1,8 @@
 <div class="row clearfix">
   <% if todo_item.completed? %>
+  <div class="complete">
   <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+  </div>
 <div class="todo_item">
   <p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
 </div>
@@ -12,10 +14,10 @@
   <%= link_to "Mark as complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
 </div>
 <div class="todo_item">
-  <p><%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?" } %></p>
+  <p><%= todo_item.content %></p>
 </div>
 <div class="trash">
-  <%= link_to "Delete", todo_list_todo_item_path(@todo_list), method: :delete, data: {confirm: "Are you sure?" } %>
+  <%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: {confirm: "Are you sure?" } %>
 </div>
 <% end %>
 </div>
