--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @todo_list.title %>
+
+<h2 class="todo_list_title"><%= @todo_list.title %></h2>
+  <p class="todo_list_sub_title"><%= @todo_list.title %></p>
 </p>
 
-<p>
+<!-- <p>
   <strong>Description:</strong>
   <%= @todo_list.description %>
-</p>
+</p> -->
 <div id="todo_items_wrapper">
   <%= render @todo_list.todo_items %>
   <div id="form">
@@ -16,5 +16,8 @@
    </div>
 </div>
 
+<div class="links">
 <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
+<%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: {confirm: "Are you sure?"} %>
 <%= link_to 'Back', todo_lists_path %>
+</div>
